добавила второй ряд карточек для лабы 7

--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
         vehicula sagittis eget a nunc. Ut cursus mauris vitae luctus feugiat. Donec ultricies nec nibh ac aliquam.
       </p>
     </article>
+
+        <article class="card">
+      <img src="monkey.png" alt="Обезьянка">
+      <p>
+        Integer ornare, nisi nec tincidunt porttitor, turpis mi facilisis lacus,
+        sit amet porta sapien leo sed erat. Duis efficitur diam a arcu congue,
+        sed fringilla sapien euismod.
+      </p>
+    </article>
+
+    <article class="card">
+      <img src="monkey.png" alt="Обезьянка">
+      <p>
+        Donec ac odio et lorem posuere euismod. Curabitur eu nulla ut erat
+        suscipit dignissim. Pellentesque habitant morbi tristique senectus et
+        netus et malesuada fames ac turpis egestas.
+      </p>
+    </article>
+
+    <article class="card">
+      <img src="monkey.png" alt="Обезьянка">
+      <p>
+        Vivamus vulputate lacus at risus bibendum, vitae pulvinar odio
+        ullamcorper. Nunc congue tincidunt lorem, vitae commodo libero dictum
+        vel.
+      </p>
+    </article>
+
   </main>
 </body>
 </html>
